--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "firebase",
+  "jest": {
+    "resetMocks": false
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
